--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-MONGO_URI=mongodb+srv://edithbird:C0nfidenceClub!@cluster.mongodb.net/test?retryWrites=true&w=majority
-DATABASE_NAME=python-class
+MONGO_URI=mongodb+srv://edithbird:C0nfidenceClub!@cluster0/python?retryWrites=true&w=majority
+DATABASE_NAME=python
+
