gonna try and inspect files.

--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://edithbird:C0nfidenceClub%21@cluster0/python?retryWrites=true&w=majority
+MONGO_URI = mongodb+srv://edithbird:C0nfidenceClub%21@cluster0.mongodb.net/python?retryWrites=true&w=majority
 DATABASE_NAME=python
 
