--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI = mongodb+srv://edithbird:C0nfidenceClub%21@cluster0.mongodb.net/python?retryWrites=true&w=majority
+MONGO_URI=mongodb://edithbird:C0nfidenceClub%21@cluster0-shard-00-00.mongodb.net:27017/python
 DATABASE_NAME=python
 
